--- a/index.html
+++ b/index.html
@@ -8,37 +8,49 @@
 
 		<title>Blog</title>
 
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
 		<link rel="stylesheet" href="./main.css">
 	</head>
 	<body>
-		<table width='100%'>
-			<tr>
-				<td width='auto'></td>	
-				<td width='600' align='center'>
-					<br>
-					<b>Mateus Arns Kreuch</b>
-					<h3>Interesting things I wrote</h3>
-					<p><a href='./posts/predicting-exponents.html'>Predicting factorization exponents</a></p>
-					<br><br>
-					<h3>Interesting things <sup>I didn't write</sup></h3>
-					<p><a href='https://fabiensanglard.net/doom3/renderer.php'>DOOM 3 source code review: renderer</a></p>
-					<p><a href='https://softwareengineering.stackexchange.com/questions/148677/why-is-80-characters-the-standard-limit-for-code-width'>Why is 80 characters the 'standard' limit for code width?</a></p>
-					<p><a href='http://lua-users.org/lists/lua-l/2009-11/msg00089.html'>LuaJIT 2.0 intellectual property disclosure and research opportunities</a></p>
-					<p><a href='https://youtu.be/o9pEzgHorH0'>Stop Writing Classes</a></p>
-					<p><a href='http://renderingpipeline.com/2012/11/understanding-the-parallelism-of-gpus/'>Understanding the parallelism of GPUs</a></p>
-					<p><a href='https://youtu.be/rX0ItVEVjHc'>CppCon 2014: Mike Acton "Data-Oriented Design and C++"</a></p>
-					<p><a href='https://www.freelists.org/post/luajit/Ramblings-on-languages-and-architectures-was-Re-any-benefit-to-throwing-off-lua51-constraints'>Ramblings on languages and architectures</a></p>
-					<p><a href='https://youtu.be/Z6lHExfem6U'>Ben Berman - Machine Learning and Level Generation</a></p>
-					<p><a href='http://www.realtimerendering.com/blog/gpus-prefer-premultiplication/'>GPUs prefer premultiplication</a></p>
-					<p><a href='https://youtu.be/OSGv2VnC0go'>Transforming Code into Beautiful, Idiomatic Python</a></p>
-					<p><a href='https://queue.acm.org/detail.cfm?id=3212479'>C Is Not a Low-level Language</a></p>
-					<p><a href='https://www.fourmilab.ch/autofile/e5/chapter2_108.html'>Creation/Evolution</a></p>
-					<p><a href='https://motherfuckingwebsite.com'>This is a motherfucking website</a></p>
-					<hr>
-					<p><a href='./vscode.html'>My VSCode settings</a></p>
-				</td>
-				<td width='auto'></td>	
-			</tr>
-		</table>
+		<div class="grid t-margin">
+			<div class="g g-grow hide-sm"></div>
+			<div class="g g-max-lg">
+				<div class="h-padding"><h1>Mateus Arns Kreuch</h1></div>
+
+				<div class="panel">
+					<h2>Interesting things I wrote</h2>
+					<ul>
+						<li><a href='./posts/predicting-exponents.html'>Predicting factorization exponents</a></li>
+					</ul>
+				</div>
+
+				<div class="panel t-margin">
+					<h2>Interesting things I didn't write</h2>
+					<ul>
+						<li><a href='https://fabiensanglard.net/doom3/renderer.php'>DOOM 3 source code review: renderer</a></li>
+						<li><a href='https://softwareengineering.stackexchange.com/questions/148677/why-is-80-characters-the-standard-limit-for-code-width'>Why is 80 characters the 'standard' limit for code width?</a></li>
+						<li><a href='http://lua-users.org/lists/lua-l/2009-11/msg00089.html'>LuaJIT 2.0 intellectual property disclosure and research opportunities</a></li>
+						<li><a href='https://youtu.be/o9pEzgHorH0'>Stop Writing Classes</a></li>
+						<li><a href='http://renderingpipeline.com/2012/11/understanding-the-parallelism-of-gpus/'>Understanding the parallelism of GPUs</a></li>
+						<li><a href='https://youtu.be/rX0ItVEVjHc'>CppCon 2014: Mike Acton "Data-Oriented Design and C++"</a></li>
+						<li><a href='https://www.freelists.org/post/luajit/Ramblings-on-languages-and-architectures-was-Re-any-benefit-to-throwing-off-lua51-constraints'>Ramblings on languages and architectures</a></li>
+						<li><a href='https://youtu.be/Z6lHExfem6U'>Ben Berman - Machine Learning and Level Generation</a></li>
+						<li><a href='http://www.realtimerendering.com/blog/gpus-prefer-premultiplication/'>GPUs prefer premultiplication</a></li>
+						<li><a href='https://youtu.be/OSGv2VnC0go'>Transforming Code into Beautiful, Idiomatic Python</a></li>
+						<li><a href='https://queue.acm.org/detail.cfm?id=3212479'>C Is Not a Low-level Language</a></li>
+						<li><a href='https://www.fourmilab.ch/autofile/e5/chapter2_108.html'>Creation/Evolution</a></li>
+						<li><a href='https://motherfuckingwebsite.com'>This is a motherfucking website</a></li>
+					</ul>
+				</div>
+				
+				<div class="txt-right t-margin">
+					<a href='./vscode.html'>My VSCode settings</a>
+				</div>
+			</div>
+			<div class="g g-grow hide-sm"></div>
+		</div>
 	</body>
 </html>
