--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">  
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">  
@@ -8,11 +9,8 @@
 
 		<title>Blog</title>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
-		<link rel="stylesheet" href="./main.css">
+		<link rel="stylesheet" href="/main.css">
 	</head>
 	<body>
 		<div class="grid t-margin">
