--- a/vscode.html
+++ b/vscode.html
@@ -1,5 +1,6 @@
+<!doctype html>
 <html>
-<head>
+<head lang="en">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
    <title>VSCode settings</title>
