--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<div class="panel t-margin">
 					<h2>Interesting things I didn't write</h2>
 					<ul>
+						<li><a href='https://qntm.org/clean'>It's probably time to stop recommending Clean Code</a></li>
 						<li><a href='https://fabiensanglard.net/doom3/renderer.php'>DOOM 3 source code review: renderer</a></li>
 						<li><a href='https://softwareengineering.stackexchange.com/questions/148677/why-is-80-characters-the-standard-limit-for-code-width'>Why is 80 characters the 'standard' limit for code width?</a></li>
 						<li><a href='http://lua-users.org/lists/lua-l/2009-11/msg00089.html'>LuaJIT 2.0 intellectual property disclosure and research opportunities</a></li>
