--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
 				<div class="panel t-margin">
 					<h2>Interesting things I didn't write</h2>
 					<ul>
+						<li><a href='https://www.destroyallsoftware.com/screencasts/catalog/functional-core-imperative-shell'>It's probably time to stop recommending Clean Code</a></li>
+						<li><a href='https://vorpus.org/blog/notes-on-structured-concurrency-or-go-statement-considered-harmful/'>It's probably time to stop recommending Clean Code</a></li>
+						<li><a href='https://cliffle.com/blog/rust-typestate/'>The Typestate Pattern in Rust</a></li>
+						<li><a href='https://lexi-lambda.github.io/blog/2019/11/05/parse-don-t-validate/'>Parse, don't validate</a></li>
+						<li><a href='https://fsharpforfunandprofit.com/posts/designing-with-types-making-illegal-states-unrepresentable/'>Designing with types: Making illegal states unrepresentable</a></li>
+						<li><a href='https://grugbrain.dev'>The Grug Brained Developer</a></li>
 						<li><a href='https://qntm.org/clean'>It's probably time to stop recommending Clean Code</a></li>
 						<li><a href='https://fabiensanglard.net/doom3/renderer.php'>DOOM 3 source code review: renderer</a></li>
-						<li><a href='https://softwareengineering.stackexchange.com/questions/148677/why-is-80-characters-the-standard-limit-for-code-width'>Why is 80 characters the 'standard' limit for code width?</a></li>
 						<li><a href='http://lua-users.org/lists/lua-l/2009-11/msg00089.html'>LuaJIT 2.0 intellectual property disclosure and research opportunities</a></li>
 						<li><a href='https://youtu.be/o9pEzgHorH0'>Stop Writing Classes</a></li>
 						<li><a href='http://renderingpipeline.com/2012/11/understanding-the-parallelism-of-gpus/'>Understanding the parallelism of GPUs</a></li>
