updated vscode settings

--- a/vscode.html
+++ b/vscode.html
@@ -30,24 +30,14 @@
    "explorer.compactFolders": false,
    "extensions.ignoreRecommendations": true,
    "files.autoGuessEncoding": true,
-   "files.exclude": {
-      "**/.classpath": true,
-      "**/.project": true,
-      "**/.settings": true,
-      "**/.factorypath": true
-   },
    "git.ignoreMissingGitWarning": true,
    "security.workspace.trust.enabled": false,
    "telemetry.telemetryLevel": "off",
    "terminal.integrated.defaultProfile.windows": "Command Prompt",
    "workbench.colorTheme": "One Monokai",
    "workbench.editor.tabSizing": "shrink",
-
-   "java.inlayHints.parameterNames.enabled": "none",
-
-   "[json]": {
-      "editor.defaultFormatter": "vscode.json-language-features"
-   },
+   "files.trimTrailingWhitespace": true,
+   "files.trimFinalNewlines": true,
 
    "rust-analyzer.inlayHints.chainingHints.enable": false,
    "rust-analyzer.inlayHints.parameterHints.enable": false,
