--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">  
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">  
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="A fun computer science blog">
 		<meta name="robots" content="index, follow">
 
@@ -28,6 +28,7 @@
 				<div class="panel t-margin">
 					<h2>Interesting things I didn't write</h2>
 					<ul>
+						<li><a href='https://br.dolphin-emu.org/blog/2017/07/30/ubershaders'>Ubershaders: A Ridiculous Solution to an Impossible Problem</a></li>
 						<li><a href='https://cliffle.com/blog/rust-typestate/'>The Typestate Pattern in Rust</a></li>
 						<li><a href='https://lexi-lambda.github.io/blog/2019/11/05/parse-don-t-validate/'>Parse, don't validate</a></li>
 						<li><a href='https://fsharpforfunandprofit.com/posts/designing-with-types-making-illegal-states-unrepresentable/'>Designing with types: Making illegal states unrepresentable</a></li>
@@ -48,7 +49,7 @@
 						<li><a href='https://motherfuckingwebsite.com'>This is a motherfucking website</a></li>
 					</ul>
 				</div>
-				
+
 				<div class="txt-right t-margin">
 					<a href='./vscode.html'>My VSCode settings</a>
 				</div>
